# ToyC

./: .gitignore  CMakeLists.txt  Makefile  任务要求.md
src/: compiler.cpp  compiler.hpp  main.cpp
src/ast/: ast.cpp  ast.hpp
src/backend/: riscv.cpp  riscv.hpp
src/frontend/: lexer.l  parser.y  parser_driver.cpp  parser_driver.hpp
src/ir/: cfg.cpp  cfg.hpp  ir.cpp  ir.hpp  ir_builder.cpp  ir_builder.hpp  optim.cpp  optim.hpp
src/sema/: semantic.cpp  semantic.hpp  symbol.hpp
src/support/: diagnostic.cpp  diagnostic.hpp
